# covenant-blood-fire

./: .gitignore  IMPLEMENTATION_TASK_LIST.md  LICENSE  README.md  pyproject.toml  test_resize.py  test_responsive_grid.py
.augment/rules/: best-practices.md  create-a-document.md  legacy-support.md  update-readme.md
config/: README.md  environmental.toml  visual.toml
docs/: 3d_layered_world_implementation_summary.md  Unified World Generation System - Integration Architecture.md  first prompt.md  resource_generation.md  technical_overview.md  three_tier_world_system_implementation.md  world_generation_design.md  zoomed out map.md
docs/archive/: 3d_layered_world_design.md  PROJECT_CONTEXT.md  autonomous-animals-design.md  command_palette_design.md  command_palette_implementation_summary.md  environmental_layers_design.md  migration-3-tier-world-gen.md  three_tier_world_system_implementation.md  (+1 more)
examples/: camera.py  local_generator.py  regional_generator.py  resource_generation_demo.py  three_tier_demo.py  tilemap.py  world_generator.py
src/: __init__.py  camera.py  input_handler.py  main.py  noise.py  view_manager.py  world_data.py  world_generator.py  world_types.py
src/empires/: main.py
tests/: __init__.py  test_animals.py  test_camera.py  test_camera_system.py  test_complete_system.py  test_coordinate_system.py  test_integration.py  test_local_generator.py  test_multi_scale_camera.py  test_noise.py  test_regional_generator.py  test_regional_scale.py  test_renderers.py  test_resource_generation.py  test_tilemap.py  test_world_generator.py  test_world_scale.py
(+80 files in other folders)
