[project]
name = "covenant-blood-fire"
version = "0.1.0"
description = "Covenant: Blood & Fire - Terminal Strategy Game"
requires-python = ">=3.13"
dependencies = ["tcod>=19.4.0"]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/empires"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
